--- a/IPMS_KLK/Views/MainMenu.xaml
+++ b/IPMS_KLK/Views/MainMenu.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.MainMenu"
              Title="Main Menu"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms" xmlns:pv="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView">
 
     <ContentPage.Background>
@@ -106,7 +107,8 @@
                             <!--Rubber Reception-->
 
                             <Frame Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" x:Name="rubber_reception_frame">
-                                <Button Text="Rubber Reception" x:Name="rubber_reception_btn"
+                                
+                                <Button  Text="Rubber Reception" x:Name="rubber_reception_btn"
                                         Command="{Binding MainMenu_to_RubberReceptionCommand}"                               
                                         HorizontalOptions="FillAndExpand"
                                         Margin="0,0,0,3"
